--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
