--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
